modelo User basico con passwords

--- a/blog/app/views/layouts/application.html.erb
+++ b/blog/app/views/layouts/application.html.erb
@@ -7,7 +7,10 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-<b>Hola Isai Mamon</b>
+  <div class="navbar navbar-blue navbar-static-top">
+<a class="navbar-brand logo" href="www.google.com.mx">Icd</a>
+<ul class="nav navbar-nav navbar-right">e</ul>
+</div>
 <%= yield %>
 
 </body>
