--- a/blog/app/views/welcome/index.html.erb
+++ b/blog/app/views/welcome/index.html.erb
@@ -1,3 +1,15 @@
-<h1>Welcome#index</h1>
-<p>Find me in app/views/welcome/index.html.erb</p>
-<p>Hello Isaias</p>
+
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8"> 
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+  </head>
+  
+  <h1>La verdadera welcome page</h1>
+  <p>Find me in app/views/welcome/index.html.erb</p>
+  <p>Hello Isaias</p>
+  
+
+</div>
+</html>
