--- a/blog/app/views/welcome/index.html.erb
+++ b/blog/app/views/welcome/index.html.erb
@@ -5,11 +5,11 @@
     <meta charset="utf-8"> 
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
-  
-  <h1>La verdadera welcome page</h1>
-  <p>Find me in app/views/welcome/index.html.erb</p>
-  <p>Hello Isaias</p>
-  
+
+<h1>  
+
+<div class="row">
+</div>
 
 </div>
 </html>
