--- a/blog/app/views/welcome/index.html.erb
+++ b/blog/app/views/welcome/index.html.erb
@@ -1,4 +1,3 @@
-
 <div class="wrapper">
     <div class="box">
         <div class="row row-offcanvas row-offcanvas-left">
@@ -21,7 +20,7 @@
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
 			<li>
-                        <a href="#"><span class="badge">Sign Up</span></a>
+                        <a><span class="badge"><%= link_to "Sign Up", '#' %></span></a>
                       </li>
 			<li>
                         <a href="#"><span class="badge">Log In</span></a>
