--- a/blog/app/views/welcome/index.html.erb
+++ b/blog/app/views/welcome/index.html.erb
@@ -20,7 +20,7 @@
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
 			<li>
-                        <a href="#"><span class="badge">Sign Up</span></a>
+                        <%= link_to "signUp", signUp_path %><span class="badge">Sign Up</span>
                       </li>
 			<li>
                         <a href="#"><span class="badge">Log In</span></a>
