Some improvements todesign, adding pictures and shit

--- a/blog/app/views/layouts/application.html.erb
+++ b/blog/app/views/layouts/application.html.erb
@@ -8,6 +8,9 @@
 </head>
 <body>	
 <%= yield %>
-<p> application.html.erb</p>
+
+      <div id="footer">
+         <p> Copyright</p>	
+      </div>
 </body>
 </html>
