--- a/blog/app/views/welcome/activity.html.erb
+++ b/blog/app/views/welcome/activity.html.erb
@@ -7,9 +7,12 @@
             <div class="column col-sm-2 col-xs-1 sidebar-offcanvas" id="sidebar">
               
               	<ul class="nav">
-          			<li><h3> Hello </h3></li>
+          			<li><h3> username </h3></li>
             	</ul>
-               
+               <br><br>
+		<ul class="nav">
+			<img src="user.png" class="img-responsive"> </img>
+		</ul>
                 <ul class="nav hidden-xs " id="lg-menu">
                     <li class="active"><a href="#featured">Tags</a></li>
 
