--- a/blog/app/views/welcome/index.html.erb
+++ b/blog/app/views/welcome/index.html.erb
@@ -32,6 +32,25 @@
                   	</nav>
                 </div>
                 <!-- /top nav -->
-        </div>
+			
+<div class="row">
+
+</div>
+
+<div class="row">
+
+<div class="col-md-4">
+ <img src="distractions.jpg" class="img-responsive">Helllloasasasasas asnas fsnsd sds ds ds ds  sd ada d a </img>
+<div>
+
+<div class="col-md-4">
+ <img src="forgeting.jpg" class="img-responsive">Helllloasasasasas asnas fsnsd sds ds ds ds  sd ada d a </img>
+</div>
+
+<div class="col-md-4">
+ <img src="agenda.jpg" class="img-responsive">Helllloasasasasas asnas fsnsd sds ds ds ds  sd ada d a </img>
+</div>
+
+</div>
 
 </div></div></div>
