New improvements to the design

--- a/blog/app/views/welcome/index.html.erb
+++ b/blog/app/views/welcome/index.html.erb
@@ -1,12 +1,9 @@
-<div class="wrapper">
-    <div class="box">
-        <div class="row row-offcanvas row-offcanvas-left">
-
     <!-- main right col -->
             <div class="column col-sm-12 col-xs-12" id="main">
                 
                 <!-- top nav -->
               	<div class="navbar navbar-blue navbar-static-top">  
+
                     <div class="navbar-header">
                       <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".navbar-collapse">
                         <span class="sr-only">Toggle</span>
@@ -16,7 +13,8 @@
                       </button>
                       <a href="/" class="navbar-brand logo">C</a>
                   	</div>
-                  	<nav class="collapse navbar-collapse" role="navigation">
+
+                  <nav class="collapse navbar-collapse" role="navigation">
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
 			<li>
@@ -25,32 +23,32 @@
 			<li>
                         <span class="badge"><%= link_to "Log In", logIn_path %></span>
                       </li>
-      <li>
+     			 <li>
                         <span class="badge"><%= link_to "Activity", activity_path %></span>
                       </li>
                     </ul>
-                  	</nav>
+                  </nav>
+
                 </div>
                 <!-- /top nav -->
 			
 <div class="row">
-
+	<img src="help.jpg"/ class ="img-responsive">
 </div>
-
+	<h1 align="center">Being productive have never been this easy!</h1>
+<br> <br> <br>
 <div class="row">
+<br>
+	<div class="col-md-4">
+	 <img src="distractions.jpg" class="img-responsive">Helllloasasasasas asnas fsnsd sds ds ds ds  sd ada d a </img>
+	</div>
 
-<div class="col-md-4">
- <img src="distractions.jpg" class="img-responsive">Helllloasasasasas asnas fsnsd sds ds ds ds  sd ada d a </img>
-<div>
+	<div class="col-md-4">
+	<img src="forgeting.jpg" class="img-responsive">Helllloasasasasas asnas fsnsd sds ds ds ds  sd ada d a </img>
+	</div>
 
-<div class="col-md-4">
- <img src="forgeting.jpg" class="img-responsive">Helllloasasasasas asnas fsnsd sds ds ds ds  sd ada d a </img>
+	<div class="col-md-4">
+	 <img src="agenda.jpg" class="img-responsive">Helllloasasasasas asnas fsnsd sds ds ds ds  sd ada d a </img>
+	</div>
+
 </div>
-
-<div class="col-md-4">
- <img src="agenda.jpg" class="img-responsive">Helllloasasasasas asnas fsnsd sds ds ds ds  sd ada d a </img>
-</div>
-
-</div>
-
-</div></div></div>
