--- a/blog/app/views/welcome/activity.html.erb
+++ b/blog/app/views/welcome/activity.html.erb
@@ -9,14 +9,15 @@
               	<ul class="nav">
           			<li><h3> username </h3></li>
             	</ul>
-               <br><br>
+               <br>
 		<ul class="nav">
 			<img src="user.png" class="img-responsive"> </img>
 		</ul>
+		<br>
                 <ul class="nav hidden-xs " id="lg-menu">
-                    <li class="active"><a href="#featured">Tags</a></li>
+                    <li class="active"><a href="#featured"><h4>Tags</h4></a></li>
 
-                    <li><a href="#stories"> Priorities </a></li>
+                    <li><a href="#stories"> <h4>Priorities</h4> </a></li>
                 </ul>
                 <ul class="list-unstyled hidden-xs" id="sidebar-footer">
                     <li>
