--- a/blog/app/views/welcome/index.html.erb
+++ b/blog/app/views/welcome/index.html.erb
@@ -23,7 +23,7 @@
                         <span class="badge"><%= link_to "Sign Up", signUp_path %></span>
                       </li>
 			<li>
-                        <span class="badge"><%= link_to "Log In", logIn_path %></span>
+                        <span class="badge"><%= link_to "Log In", login_path %></span>
                       </li>
       <li>
                         <span class="badge"><%= link_to "Activity", activity_path %></span>
