--- a/blog/app/views/user/show.html.erb
+++ b/blog/app/views/user/show.html.erb
@@ -1,5 +1,139 @@
-<% provide(:title, 'Sign up') %>
-<div class="column col-sm-2 col-xs-1 sidebar-offcanvas">
-  <%= @user.name %>, <%= @user.email %>
-  
+<div class="wrapper">
+    <div class="box">
+        <div class="row row-offcanvas row-offcanvas-left">
+                      
+          
+            <!-- sidebar -->
+            <div class="column col-sm-2 col-xs-1 sidebar-offcanvas" id="sidebar">
+              
+              	<ul class="nav">
+          			<% if logged_in? %>
+          <li><%= link_to "Users", '#' %></li>
+            	</ul>
+               <br><br>
+		<ul class="nav">
+			<img src="user.png" class="img-responsive"> </img>
+		</ul>
+                <ul class="nav hidden-xs " id="lg-menu">
+                    <li class="active"><a href="#featured">Tags</a></li>
+
+                    <li><a href="#stories"> Priorities </a></li>
+                </ul>
+                <ul class="list-unstyled hidden-xs" id="sidebar-footer">
+                    <li>
+                      <%= link_to "Log out", logout_path, method: "delete" %>
+                    </li>
+                </ul>
+              <% else %>
+          <li><%= link_to "Log in", login_path %></li>
+        <% end %>
+              	<!-- tiny only nav-->
+              <ul class="nav visible-xs" id="xs-menu">
+                  	<li><a href="#featured" class="text-center"><i class="glyphicon glyphicon-list-alt"></i></a></li>
+                    <li><a href="#stories" class="text-center"><i class="glyphicon glyphicon-list"></i></a></li>
+                  	<li><a href="#" class="text-center"><i class="glyphicon glyphicon-paperclip"></i></a></li>
+                </ul>
+              
+            </div>
+            <!-- /sidebar -->
+          
+            <!-- main right col -->
+            <div class="column col-sm-10 col-xs-11" id="main">
+                
+                <!-- top nav -->
+              	<div class="navbar navbar-blue navbar-static-top">  
+                    <div class="navbar-header">
+                      <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".navbar-collapse">
+                        <span class="sr-only">Toggle</span>
+                        <span class="icon-bar"></span>
+          				<span class="icon-bar"></span>
+          				<span class="icon-bar"></span>
+                      </button>
+                      <a href="/" class="navbar-brand logo">b</a>
+                  	</div>
+                  	<nav class="collapse navbar-collapse" role="navigation">
+                    <form class="navbar-form navbar-left">
+                        <div class="input-group input-group-sm" style="max-width:360px;">
+                          <input type="text" class="form-control" placeholder="Search" name="srch-term" id="srch-term">
+                          <div class="input-group-btn">
+                            <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+                          </div>
+                        </div>
+                    </form>
+                  	</nav>
+                </div>
+                <!-- /top nav -->
+              
+                <div class="padding">
+                    <div class="full col-sm-9">
+                      
+                        <!-- content -->                      
+                      	<div class="row">
+                          
+                         <!-- main col left --> 
+                         <div class="col-sm-12">
+                           
+                              <div class="panel panel-default">
+                                <div class="panel-thumbnail"><img src="/assets/example/bg_5.jpg" class="img-responsive"></div>
+                                <div class="panel-body">
+                                  <p class="lead">Urbanization</p>
+                                  <p>45 Followers, 13 Posts</p>
+                                  
+                                  <p>
+                                    <img src="https://lh3.googleusercontent.com/uFp_tsTJboUY7kue5XAsGA=s28" width="28px" height="28px">
+                                  </p>
+                                </div>
+                              </div>
+
+                           
+                              <div class="panel panel-default">
+                                <div class="panel-heading"><a href="#" class="pull-right">View all</a> <h4>Bootstrap Examples</h4></div>
+                                  <div class="panel-body">
+                                    <div class="list-group">
+                                      <a href="http://bootply.com/tagged/modal" class="list-group-item">Modal / Dialog</a>
+                                      <a href="http://bootply.com/tagged/datetime" class="list-group-item">Datetime Examples</a>
+                                      <a href="http://bootply.com/tagged/datatable" class="list-group-item">Data Grids</a>
+                                    </div>
+                                  </div>
+                              </div>
+                           
+                              <div class="well"> 
+                                   <form class="form-horizontal" role="form">
+                                    <h4>What's New</h4>
+                                     <div class="form-group" style="padding:14px;">
+                                      <textarea class="form-control" placeholder="Update your status"></textarea>
+                                    </div>
+                                    <button class="btn btn-primary pull-right" type="button">Post</button><ul class="list-inline"><li><a href=""><i class="glyphicon glyphicon-upload"></i></a></li><li><a href=""><i class="glyphicon glyphicon-camera"></i></a></li><li><a href=""><i class="glyphicon glyphicon-map-marker"></i></a></li></ul>
+                                  </form>
+                              </div>
+                           
+                              <div class="panel panel-default">
+                                 <div class="panel-heading"><a href="#" class="pull-right">View all</a> <h4>More Templates</h4></div>
+                                  <div class="panel-body">
+                                    <img src="//placehold.it/150x150" class="img-circle pull-right"> <a href="#">Free @Bootply</a>
+                                    <div class="clearfix"></div>
+                                    There a load of new free Bootstrap 3 ready templates at Bootply. All of these templates are free and don't require extensive customization to the Bootstrap baseline.
+                                    <hr>
+                                    <ul class="list-unstyled"><li><a href="http://www.bootply.com/templates">Dashboard</a></li><li><a href="http://www.bootply.com/templates">Darkside</a></li><li><a href="http://www.bootply.com/templates">Greenfield</a></li></ul>
+                                  </div>
+                              </div>
+                           
+                              <div class="panel panel-default">
+                                <div class="panel-heading"><h4>What Is Bootstrap?</h4></div>
+                               	<div class="panel-body">
+                                	Bootstrap is front end frameworkto build custom web applications that are fast, responsive &amp; intuitive. It consist of CSS and HTML for typography, forms, buttons, tables, grids, and navigation along with custom-built jQuery plug-ins and support for responsive layouts. With dozens of reusable components for navigation, pagination, labels, alerts etc..                          </div>
+                              </div>
+
+                           		
+                           
+                          </div>
+                          
+            <!-- /main -->
+          
+        </div>
+    </div>
+</div>
+
   </div>
+  </div>
+</div>
