--- a/blog/app/views/welcome/index.html.erb
+++ b/blog/app/views/welcome/index.html.erb
@@ -40,15 +40,15 @@
 <div class="row">
 <br>
 	<div class="col-md-4">
-	 <img src="distractions.jpg" class="img-responsive">Helllloasasasasas asnas fsnsd sds ds ds ds  sd ada d a </img>
+	 <img src="distractions.jpg" class="img-responsive">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris vel molestie enim. </img>
 	</div>
 
 	<div class="col-md-4">
-	<img src="forgeting.jpg" class="img-responsive">Helllloasasasasas asnas fsnsd sds ds ds ds  sd ada d a </img>
+	<img src="forgeting.jpg" class="img-responsive">Curabitur fermentum fermentum ipsum a scelerisque. Morbi nunc diam, rhoncus ac dui vel, dignissim bibendum elit. Vivamus nulla felis, dapibus eget ante eu, molestie aliquam tortor.</img>
 	</div>
 
 	<div class="col-md-4">
-	 <img src="agenda.jpg" class="img-responsive">Helllloasasasasas asnas fsnsd sds ds ds ds  sd ada d a </img>
+	 <img src="agenda.jpg" class="img-responsive">Mauris scelerisque orci vel urna lacinia accumsan. Vivamus maximus ullamcorper finibus. Etiam facilisis nunc eget dui placerat ultrices. </img>
 	</div>
 
 </div>
