--- a/blog/app/views/welcome/activity.html.erb
+++ b/blog/app/views/welcome/activity.html.erb
@@ -7,24 +7,27 @@
             <div class="column col-sm-2 col-xs-1 sidebar-offcanvas" id="sidebar">
               
               	<ul class="nav">
-          			<li><h3> username </h3></li>
-            	</ul>
-               <br>
-		<ul class="nav">
-			<img src="user.png" class="img-responsive"> </img>
-		</ul>
-		<br>
-                <ul class="nav hidden-xs " id="lg-menu">
+          			<% if logged_in? %>
+                  <li><%= link_to "Users", '#' %></li>
+              	</ul>
+                  <br>
+		              <ul class="nav">
+            			  <img src="/userAS.png" class="img-responsive"> </img>
+            		  </ul>
+		              <br>
+                  <ul class="nav hidden-xs " id="lg-menu">
                     <li class="active"><a href="#featured"><h4>Tags</h4></a></li>
 
                     <li><a href="#stories"> <h4>Priorities</h4> </a></li>
-                </ul>
-                <ul class="list-unstyled hidden-xs" id="sidebar-footer">
+                  </ul>
+                  <ul class="list-unstyled hidden-xs" id="sidebar-footer">
                     <li>
-                      <a href="http://www.bootply.com"><h3>log out</h3> </a>
+                      <%= link_to "Log out", logout_path, method: "delete" %>
                     </li>
                 </ul>
-              
+              <% else %>
+              <li><%= link_to "Log in", login_path %></li>
+              <% end %>
               	<!-- tiny only nav-->
               <ul class="nav visible-xs" id="xs-menu">
                   	<li><a href="#featured" class="text-center"><i class="glyphicon glyphicon-list-alt"></i></a></li>
