Slight design polish

--- a/blog/app/views/welcome/index.html.erb
+++ b/blog/app/views/welcome/index.html.erb
@@ -23,9 +23,7 @@
 			<li>
                         <span class="badge"><%= link_to "Log In", login_path %></span>
                       </li>
-     			 <li>
-                        <span class="badge"><%= link_to "Activity", activity_path %></span>
-                      </li>
+     			 
                     </ul>
                   </nav>
 
@@ -35,7 +33,7 @@
 <div class="row">
 	<img src="help.jpg"/ class ="img-responsive">
 </div>
-	<h1 align="center">Being productive have never been this easy!</h1>
+	<h1 align="center">Being productive has never been this easy</h1>
 <br> <br> <br>
 <div class="row">
 <br>
