--- a/blog/app/views/layouts/application.html.erb
+++ b/blog/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
 <%= yield %>
 
       <div id="footer">
-         <p> Copyright</p>	
+         <p> Concrastinator © 2015</p>	
       </div>
 </body>
 </html>
