--- a/blog/app/views/user/show.html.erb
+++ b/blog/app/views/user/show.html.erb
@@ -9,7 +9,7 @@
               	<ul class="nav">
           			<% if !logged_in? %>
           			
-                  <li><%= link_to "User", '#' %></li>
+                  <li><%= @user.name %></li>
               	</ul>
                   <br>
 		              <ul class="nav">
@@ -51,7 +51,7 @@
           				<span class="icon-bar"></span>
           				<span class="icon-bar"></span>
                       </button>
-                      <a href="/" class="navbar-brand logo">b</a>
+                      <a href="/" class="navbar-brand logo">C</a>
                   	</div>
                   	<nav class="collapse navbar-collapse" role="navigation">
                     <form class="navbar-form navbar-left">
