An improvement to the index Page

--- a/blog/app/views/welcome/index.html.erb
+++ b/blog/app/views/welcome/index.html.erb
@@ -30,12 +30,19 @@
                 </div>
                 <!-- /top nav -->
 			
-<div class="row">
-	<img src="help.jpg"/ class ="img-responsive">
+
+<div class="row col-md-12">
+  <div class="col-md-1 "> </div>
+  <div class ="col-md-10">
+	 <img src="help.jpg" class ="img-responsive">
+  </div>
+  <div class="col-md-1 "> </div>
 </div>
+  <div class="col-md-12">
 	<h1 align="center">Being productive has never been this easy</h1>
+  </div>
 <br> <br> <br>
-<div class="row">
+<div class="row col-md-12">
 <br>
 	<div class="col-md-4">
 	 <img src="distractions.jpg" class="img-responsive">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris vel molestie enim. </img>
