More beautiful buttons for the index page

--- a/blog/app/views/welcome/index.html.erb
+++ b/blog/app/views/welcome/index.html.erb
@@ -18,10 +18,10 @@
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
 			<li>
-                        <span class="badge"><%= link_to "Sign Up", signUp_path %></span>
+                        <span class="btn btn-default navbar-btn"><%= link_to "Sign Up", signUp_path %></span>
                       </li>
 			<li>
-                        <span class="badge"><%= link_to "Log In", login_path %></span>
+                        <span class="btn btn-default navbar-btn"><%= link_to "Log In", login_path %></span>
                       </li>
      			 
                     </ul>
@@ -41,7 +41,7 @@
   <div class="col-md-12">
 	<h1 align="center">Being productive has never been this easy</h1>
   </div>
-<br> <br> <br>
+<br> <br>
 <div class="row col-md-12">
 <br>
 	<div class="col-md-4">
