--- a/blog/app/views/welcome/index.html.erb
+++ b/blog/app/views/welcome/index.html.erb
@@ -18,7 +18,7 @@
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
 			<li>
-                        <span class="btn btn-default navbar-btn"><%= link_to "Sign Up", signUp_path %></span>
+                        <span class="btn btn-default navbar-btn"><%= link_to "Sign Up", signup_path %></span>
                       </li>
 			<li>
                         <span class="btn btn-default navbar-btn"><%= link_to "Log In", login_path %></span>
