changes to show

--- a/blog/app/views/user/show.html.erb
+++ b/blog/app/views/user/show.html.erb
@@ -13,7 +13,7 @@
               	</ul>
                   <br>
 		              <ul class="nav">
-            			  <img src="userAS.png" class="img-responsive"> </img>
+            			  <img src="forgeting.jpg" class="img-responsive"> </img>
             		  </ul>
 		              <br>
                   <ul class="nav hidden-xs " id="lg-menu">
