--- a/blog/app/views/user/show.html.erb
+++ b/blog/app/views/user/show.html.erb
@@ -79,7 +79,7 @@
                                 <div class="panel-thumbnail"><img src="/assets/example/bg_5.jpg" class="img-responsive"></div>
                                 <div class="panel-body">
                                   <p class="lead">Urbanization</p>
-                                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                                  <p> <%= @user.id%>Lorem ipsum dolor sit amet, consectetur adipiscing elit.<%=session[:user_id]%> Hola</p>
                                   
                                   <p>
                                     <img src="https://lh3.googleusercontent.com/uFp_tsTJboUY7kue5XAsGA=s28" width="28px" height="28px">
