--- a/blog/app/views/welcome/index.html.erb
+++ b/blog/app/views/welcome/index.html.erb
@@ -39,7 +39,7 @@
   <div class="col-md-1 "> </div>
 </div>
   <div class="col-md-12">
-	<h1 align="center">Being productive has never been this easy</h1>
+	<h1 align="center">Start today, finish in time</h1>
   </div>
 <br> <br>
 <div class="row col-md-12">
