--- a/blog/app/views/tasks/_task.html.erb
+++ b/blog/app/views/tasks/_task.html.erb
@@ -1,8 +1,8 @@
-<li id="micropost-<%= micropost.id %>">
-  <%= link_to gravatar_for(micropost.user, size: 50), micropost.user %>
-  <span class="user"><%= link_to micropost.user.name, micropost.user %></span>
-  <span class="content"><%= micropost.content %></span>
+<li id="task-<%= task.id %>">
+  <%= link_to gravatar_for(task.user, size: 50), task.user %>
+  <span class="user"><%= link_to task.user.name, task.user %></span>
+  <span class="content"><%= task.content %></span>
   <span class="timestamp">
-    Posted <%= time_ago_in_words(micropost.created_at) %> ago.
+    Posted <%= time_ago_in_words(task.created_at) %> ago.
   </span>
 </li>
