Invalid user routing, task creation details

--- a/blog/app/views/welcome/index.html.erb
+++ b/blog/app/views/welcome/index.html.erb
@@ -34,7 +34,7 @@
 <div class="row col-md-12">
   <div class="col-md-1 "> </div>
   <div class ="col-md-10">
-	 <img src="help.jpg" class ="img-responsive">
+	 <img src="help.jpg" class ="img-responsive" height=5%>
   </div>
   <div class="col-md-1 "> </div>
 </div>
