--- a/blog/app/views/users/show.html.erb
+++ b/blog/app/views/users/show.html.erb
@@ -9,7 +9,7 @@
               	<ul class="nav">
           			<% if logged_in? %>
           			
-                  <li><%= @user.name %></li>
+                  <li><h1><%= @user.name %></h1></li>
               	</ul>
                   <br>
 		              <ul class="nav">
@@ -40,6 +40,7 @@
             <!-- /sidebar -->
           
             <!-- main right col -->
+
             <div class="column col-sm-10 col-xs-11" id="main">
                 
                 <!-- top nav -->
@@ -67,7 +68,7 @@
                 <!-- /top nav -->
               
                 <div class="padding">
-                    <div class="full col-sm-9">
+                    <div class="full col-sm-10">
                       
                         <!-- content -->                      
                       	<div class="row">
@@ -87,59 +88,7 @@
                          </div>
                   </div>
               </div>
-
-
-                              <div class="panel panel-default">
-                                <div class="panel-thumbnail"><img src="/assets/example/bg_5.jpg" class="img-responsive"></div>
-                                <div class="panel-body">
-                                  <p class="lead">Urbanization</p>
-                                  <p> <%= @user.id%>Lorem ipsum dolor sit amet, consectetur adipiscing elit.<%=session[:user_id]%> Hola</p>
-                                  
-                                  <p>
-                                    <img src="https://lh3.googleusercontent.com/uFp_tsTJboUY7kue5XAsGA=s28" width="28px" height="28px">
-                                  </p>
-                                </div>
-                              </div>
-
-                           
-                              <div class="panel panel-default">
-                                <div class="panel-heading"><a href="#" class="pull-right">View all</a> <h4>Bootstrap Examples</h4></div>
-                                  <div class="panel-body">
-                                    <div class="list-group">
-                                      <a href="http://bootply.com/tagged/modal" class="list-group-item">Modal / Dialog</a>
-                                      <a href="http://bootply.com/tagged/datetime" class="list-group-item">Datetime Examples</a>
-                                      <a href="http://bootply.com/tagged/datatable" class="list-group-item">Data Grids</a>
-                                    </div>
-                                  </div>
-                              </div>
-                           
-                              <div class="well"> 
-                                   <form class="form-horizontal" role="form">
-                                    <h4>What's New</h4>
-                                     <div class="form-group" style="padding:14px;">
-                                      <textarea class="form-control" placeholder="Update your status"></textarea>
-                                    </div>
-                                    <button class="btn btn-primary pull-right" type="button">Post</button><ul class="list-inline"><li><a href=""><i class="glyphicon glyphicon-upload"></i></a></li><li><a href=""><i class="glyphicon glyphicon-camera"></i></a></li><li><a href=""><i class="glyphicon glyphicon-map-marker"></i></a></li></ul>
-                                  </form>
-                              </div>
-                           
-                              <div class="panel panel-default">
-                                 <div class="panel-heading"><a href="#" class="pull-right">View all</a> <h4>More Templates</h4></div>
-                                  <div class="panel-body">
-                                    <img src="//placehold.it/150x150" class="img-circle pull-right"> <a href="#">Free @Bootply</a>
-                                    <div class="clearfix"></div>
-                                    There a load of new free Bootstrap 3 ready templates at Bootply. All of these templates are free and don't require extensive customization to the Bootstrap baseline.
-                                    <hr>
-                                    <ul class="list-unstyled"><li><a href="http://www.bootply.com/templates">Dashboard</a></li><li><a href="http://www.bootply.com/templates">Darkside</a></li><li><a href="http://www.bootply.com/templates">Greenfield</a></li></ul>
-                                  </div>
-                              </div>
-                           
-                              <div class="panel panel-default">
-                                <div class="panel-heading"><h4>What Is Bootstrap?</h4></div>
-                                <div class="panel-body">
-                                  Bootstrap is front end frameworkto build custom web applications that are fast, responsive &amp; intuitive. It consist of CSS and HTML for typography, forms, buttons, tables, grids, and navigation along with custom-built jQuery plug-ins and support for responsive layouts. With dozens of reusable components for navigation, pagination, labels, alerts etc..                          </div>
-                              </div>
-
   </div>
   </div>
+</div>
 </div>
