Create, read tasks from activity

--- a/blog/app/views/tasks/_task.html.erb
+++ b/blog/app/views/tasks/_task.html.erb
@@ -1,8 +1,12 @@
 <li id="task-<%= task.id %>">
-  <%= link_to gravatar_for(task.user, size: 50), task.user %>
-  <span class="user"><%= link_to task.user.name, task.user %></span>
+  <span class="user"><%= task.title %></span>
   <span class="content"><%= task.content %></span>
   <span class="timestamp">
-    Posted <%= time_ago_in_words(task.created_at) %> ago.
+  Due: <%= (task.due_date).to_date %>.
   </span>
+  <!-- Should be task_tag-->
+  <span class="priority">
+  <%= task.priority.title %></span>
+  <span class="tag">
+  <%= task.tag.title %></span>
 </li>
