--- a/blog/app/views/layouts/application.html.erb
+++ b/blog/app/views/layouts/application.html.erb
@@ -6,10 +6,11 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
-<body>	
+<body>
+
 <%= yield %>
       <div id="footer">
-         <p> Concrastinator © 2015</p>	
+         <p> Application HTML ERB</p>	
       </div>
 </body>
 </html>
