--- a/blog/app/assets/stylesheets/users.scss
+++ b/blog/app/assets/stylesheets/users.scss
@@ -2,6 +2,13 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 /* custom template */
+
+.task-panel{
+  background-color:#f9fafb;
+  color:#555555;
+  margin-bottom:5px;
+}
+
 html, body {
    height: 100%;
    font-family:verdana,arial,sans-serif;
