--- a/blog/app/views/shared/_task_form.html.erb
+++ b/blog/app/views/shared/_task_form.html.erb
@@ -1,13 +1,17 @@
-<div style="border-style: solid;rgba(129, 167, 249, 0.63);border-color:black;padding-left:1em;padding-top:1em">
+<div style="border-style: solid;rgba(129, 167, 249, 0.63);border-color:black;padding-left:1em;padding-top:1em;padding-bottom:1em;width:90%">
 <%= form_for(Task.new) do |f| %>
   <%= render 'shared/error_messages', object: f.object %>
   <div class="field">
   	<%= f.text_area :title, placeholder: "New task..." %>
     <%= f.text_area :content, placeholder: "Description..." %>
-    <%= f.datetime_select :due_date, :ampm => true, :default => Time.now %>
+    <%= f.datetime_select :due_date, :ampm => true, :order => [:day, :month, :year], :default => Time.now.beginning_of_hour().advance(:hours => 1), :discard_minute => true %>
     <br>
-    <%= f.collection_select(:priority_id, Priority.where(:user_id => current_user.id), :id, :title, :prompt => 'Priority...') %>
-    <%= f.collection_select(:tag_id, Tag.where(:user_id => current_user.id), :id, :title, :prompt => 'Tag...') %>
+    <div style="margin-top:0.5em;font-weight:bold">
+    Priority: 
+    <%= f.collection_select(:priority_id, Priority.where(:user_id => current_user.id), :id, :title) %>
+    Tag: 
+    <%= f.collection_select(:tag_id, Tag.where(:user_id => current_user.id), :id, :title) %>
+    </div>
   </div>
   <%= f.submit "Post", class: "btn btn-primary" %>
 <% end %>
